--- a/res-front/src/styles.css
+++ b/res-front/src/styles.css
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+
+*{
+    --blue : #0079FF;
+    --green: #00DFA2;
+    --yellow: #F6FA70;
+    --red: #FF0060;
+}
