--- a/res-front/src/app/nav/nav.component.html
+++ b/res-front/src/app/nav/nav.component.html
@@ -19,7 +19,7 @@
     <img src="../../assets/res-logo.png" alt="">
 
     <ul>
-        <a href="">Home</a>
+        <a class="active" href="">Home</a>
         <a href="">Solutions</a>
         <a href="">Contact Us</a>
     </ul>
