--- a/res-front/src/app/nav/nav.component.css
+++ b/res-front/src/app/nav/nav.component.css
@@ -24,12 +24,12 @@
 }
 
 .upperNav div:first-child i{
-    margin-left: 40px;
-    margin-right: 20px;
+    margin-left: 2.5rem;
+    margin-right: 1.5rem;
 }
 .upperNav div:last-child i{
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 1rem;
+    margin-right: 1rem;
     font-size: 1.4rem;
     cursor: pointer;
 }
@@ -45,7 +45,7 @@
     position:sticky;
     top: 0;
     background-color: white;
-    height: 80px;
+    height: 5rem;
     display: flex;
     align-items: center;
     z-index: 100;
@@ -67,8 +67,8 @@
 
 .lowerNav a{
     text-decoration: none;
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: 2rem;
+    margin-right: 2rem;
     font-size: 1.4rem;
     font-family: sans-serif;
     color: black; 
