--- a/res-front/src/styles.css
+++ b/res-front/src/styles.css
@@ -9,6 +9,11 @@
 :root{
     font-size: 15px;
 }
+html,body{
+    padding: 0px;
+    margin: 0px;
+}
+
 @media screen and (max-width: 800px) {
     :root{
         font-size: 12px;
