--- a/res-front/src/app/nav/nav.component.css
+++ b/res-front/src/app/nav/nav.component.css
@@ -2,7 +2,7 @@
     
     background-color: var(--green);
     font-size: 1.2rem;
-    padding: 10px;
+    padding: 0.5vw;
     color:white;
 
 }
@@ -14,13 +14,13 @@
 }
 
 .upperNav div:first-child{
-    width: 80%;
+    width: 75%;
     text-align:start;
     padding-left: 10px;
 }
 
 .upperNav div:last-child{
-    width: 20%;
+    width: 25%;
 }
 
 .upperNav div:first-child i{
