--- a/res-front/src/app/app.component.html
+++ b/res-front/src/app/app.component.html
@@ -5,4 +5,8 @@
 
 <app-cards-carousel></app-cards-carousel>
 
+<app-service></app-service>
+
+<app-message></app-message> 
+
 <router-outlet></router-outlet>
