--- a/res-front/src/app/cards-carousel/cards-carousel.component.html
+++ b/res-front/src/app/cards-carousel/cards-carousel.component.html
@@ -11,7 +11,7 @@
 </header>
 
 
-<section data-aos="zoom-in" data-aos-delay="600" data-aos-id="carousel">
+<section data-aos="zoom-out-up" data-aos-delay="600" data-aos-id="carousel">
 
     <div *ngFor = "let card of cards; index as i" class="card" [style] = "cardStyle(i)" (click)="cardChoose(i)">
         <img [src]="card.src" alt="">
