--- a/res-front/src/styles.css
+++ b/res-front/src/styles.css
@@ -7,28 +7,12 @@
 }
 
 :root{
-    font-size: 15px;
+    font-size: 1vw;
 }
 html,body{
     padding: 0px;
     margin: 0px;
 }
 
-@media screen and (max-width: 800px) {
-    :root{
-        font-size: 12px;
-      }
-  }
 
-  @media screen and (max-width: 600px) {
-    :root{
-        font-size: 8px;
-      }
-  }
-
-  @media screen and (max-width: 500px) {
-    :root{
-        font-size: 6px;
-      }
-  }
   
