designed featured and got more responsive

--- a/res-front/src/app/cards-carousel/cards-carousel.component.css
+++ b/res-front/src/app/cards-carousel/cards-carousel.component.css
@@ -1,17 +1,16 @@
 :host{
     display:block;
     background: radial-gradient( rgba(0, 90, 128, 0.256) 0%, white 70%);
-    font-size: 1vw;
+    font-size: 1rem;
     font-family: sans-serif;
     overflow: hidden;
 }
 
 
 header{
-    overflow:auto;
     margin-top: 20px;
     text-align: center;
-    font-size: 1.5em;
+    font-size: 1.5rem;
     line-height: 2.5rem;
     padding-left: 10%;
     padding-right: 10%;
@@ -19,12 +18,13 @@ header{
 }
 
 header h1{
-    letter-spacing: 6px;
+    letter-spacing: 0.3rem;
    /* animation-name: reveal;
     animation-duration: 1s;*/
 }
 
 header p{
+    font-size: 1.7rem;
     /*animation-name: reveal;
     animation-duration: 2s;
     animation-delay: 0.3s;
@@ -73,12 +73,27 @@ section{
     text-align: center;
     text-decoration: none;
     color: white;
-    font-size: 1.7em;
-    line-height: 2em;
-    padding: 1em;
+    font-size: 1.8vw;
+    padding: 1vw;
     
 }
 .card a:hover{
     text-decoration: underline;
 }
+
+@media screen and (max-width: 1000px) {
+    .card a{
+        font-size: 2vw;
+      }
+  }
+
+@media screen and (max-width: 800px) {
+    .card a{
+        font-size: 3vw;
+      }
+    section{
+        height:60vw;   
+    }
+  }
+
 
