--- a/res-front/src/app/message/message.component.css
+++ b/res-front/src/app/message/message.component.css
@@ -1,7 +1,10 @@
+:host{
+    overflow: hidden;
+}
 section{
     position: relative;
     margin-top: 100px;
-    height: 25vw;
+    height: 30rem;
     font-family: sans-serif;
     display: flex;
     flex-direction: column;
@@ -33,8 +36,36 @@ p{
     margin-top: 0px;
     padding-left: 8%;
     padding-right: 8%;
-    font-size: 1.8rem;
+    font-size: 1.7rem;
     line-height: 5rem;
     color: white;
     font-weight: bold;
 }
+
+@media screen and (max-width: 1000px) {
+    section{
+        margin-top: 50px;
+        height: 40rem;
+    }
+    
+    h1{
+        font-size: 3.5rem;
+
+    }
+    p{
+        font-size: 1.5rem;
+        line-height: 4rem;
+    }
+  }
+
+@media screen and (max-width: 800px) {
+
+  }
+
+@media screen and (max-width: 600px) {
+
+  }
+
+@media screen and (max-width: 500px) {
+
+  }
