--- a/res-front/src/app/power/power.component.css
+++ b/res-front/src/app/power/power.component.css
@@ -16,7 +16,7 @@ p{
     top: 10%;
     left: 50%;
     font-size:10vw;
-    word-spacing: 3rem;
+    word-spacing: 3vw;
     line-height: 15vw;
     font-family: sans-serif;
     text-transform: uppercase;
@@ -48,4 +48,21 @@ p span:last-child{
 @keyframes reveal {
     from {opacity: 0%;}
     to {opacity: 100%;}
+  }
+
+  @media screen and (max-width: 1000px) {
+
+  }
+
+@media screen and (max-width: 800px) {
+    :host{
+        margin-bottom: 50px;
+      }
+      img{
+        height: 80vw;
+      }
+      p{
+        font-size:10vw;
+        line-height: 20vw;
+    }
   }
