--- a/res-front/src/styles.css
+++ b/res-front/src/styles.css
@@ -14,5 +14,27 @@ html,body{
     margin: 0px;
 }
 
+@media screen and (max-width: 1000px) {
+    :root{
+        font-size: 1.5vw;
+      }
+  }
 
+@media screen and (max-width: 800px) {
+    :root{
+        font-size: 2vw;
+      }
+  }
+
+  @media screen and (max-width: 600px) {
+    :root{
+        font-size: 2.2vw;
+      }
+  }
+
+  @media screen and (max-width: 500px) {
+    :root{
+        font-size: 2.3vw;
+      }
+  }
   
