--- a/res-front/src/app/message/message.component.html
+++ b/res-front/src/app/message/message.component.html
@@ -1,6 +1,6 @@
 
 
-<section data-aos="fade-right">
+<section class="message" data-aos="fade-right">
 
     <h1>Never Be Left In The Dark Again</h1>
     <p>Power on, Worry off! Trust Renewable Energy Systems for Reliable and Uninterrupted Power.<br> With our trusted UPSs Keep your business running smoothly, no matter the circumstances!</p>
