--- a/res-front/src/app/power/power.component.html
+++ b/res-front/src/app/power/power.component.html
@@ -1,3 +1,8 @@
-<img src="../../assets/front.jpg" alt="">
+<section class="power">
 
-<p> <span>Power </span> <br/> <span>Your </span> <br/> <span>Life</span></p>
+    <img src="../../assets/front.jpg" alt="">
+
+    <p> <span>Power </span> <br/> <span>Your </span> <br/> <span>Life</span></p>
+    
+</section>
+
