--- a/res-front/src/app/cards-carousel/cards-carousel.component.css
+++ b/res-front/src/app/cards-carousel/cards-carousel.component.css
@@ -1,7 +1,6 @@
 :host{
     display:block;
     background: radial-gradient( rgba(0, 90, 128, 0.256) 0%, white 70%);
-    font-size: 1rem;
     font-family: sans-serif;
     overflow: hidden;
 }
@@ -19,25 +18,14 @@ header{
 
 header h1{
     letter-spacing: 0.3rem;
-   /* animation-name: reveal;
-    animation-duration: 1s;*/
 }
 
 header p{
     font-size: 1.7rem;
-    /*animation-name: reveal;
-    animation-duration: 2s;
-    animation-delay: 0.3s;
-    animation-fill-mode: both;*/
 }
 
-/*@keyframes reveal {
-    from {opacity: 0%;position: relative;top: 30px;}
-    to {opacity: 100%;position: relative;top: 0px;}
-  }*/
 
-
-section{
+.carousel{
     margin-left: 1%;
     margin-right: 1%;
     height:40vw;   
@@ -45,7 +33,7 @@ section{
     overflow: hidden;
 }
 
-.card{
+.carousel .card{
     width: 25%;
     height: 100%;
     cursor: pointer;
@@ -59,13 +47,13 @@ section{
     filter:brightness(80%);
 }
 
-.card img{
+.carousel .card img{
     width: 100%;
     height: 50%;
     object-fit: cover;
 
 }
-.card a{
+.carousel .card a{
     height: 45%;
     display: flex;
     flex-direction: column;
@@ -77,21 +65,21 @@ section{
     padding: 1vw;
     
 }
-.card a:hover{
+.carousel .card a:hover{
     text-decoration: underline;
 }
 
 @media screen and (max-width: 1000px) {
-    .card a{
+    .carousel .card a{
         font-size: 2vw;
       }
   }
 
 @media screen and (max-width: 800px) {
-    .card a{
+    .carousel .card a{
         font-size: 3vw;
       }
-    section{
+      .carousel{
         height:60vw;   
     }
   }
