--- a/res-front/src/app/footer/footer.component.html
+++ b/res-front/src/app/footer/footer.component.html
@@ -1,9 +1,9 @@
 
 <footer>
     
-   <div>
-    <span><i class="fa-solid fa-phone"></i> +20 123456789 / +20 123456789 / +20 123456789 / +20 123456789</span>
-    <span><i class="fa-solid fa-envelope"></i> Info@res-eg.com</span>
+   <div class="contact">
+    <span><i class="fa-solid fa-phone"></i> <strong>+20 123456789 / +20 123456789 / +20 123456789 / +20 123456789</strong> </span>
+    <span><i class="fa-solid fa-envelope"></i> <strong>Info@res-eg.com</strong> </span>
     <span>
         <i class="fa-brands fa-linkedin"></i>
         <i class="fa-brands fa-facebook"></i>
@@ -11,17 +11,17 @@
     </span>
    </div>
 
-   <div>
-    <img src="../../assets/res-logo-transp.png" alt="">
+   <div class="res">
+    <img src="../../assets/res-logo-transp-white.png" alt="">
     <span>Renewable Energy Systems</span>
    </div>
 
-   <div>
+   <div class="subscribe">
         <h2>Subscribe Now</h2>
         <span>Sign up to receive our latest news & offers.</span>
-        <input type="text" placeholder="Enter your email address">
+        <input type="email" placeholder="Enter your email address">
         <button>Subscribe Now</button>
    </div> 
 
-   <div>Copyright © res-eg.com All Rights Reserved.</div>
+   <div class="Copyright">Copyright © res-eg.com All Rights Reserved.</div>
 </footer>
