--- a/res-front/src/app/nav/nav.component.css
+++ b/res-front/src/app/nav/nav.component.css
@@ -25,7 +25,7 @@
 }
 
 .upperNav div:first-child i{
-    margin-left: 2.5rem;
+    margin-left: 2rem;
     margin-right: 1.5rem;
 }
 .upperNav div:last-child i{
@@ -56,12 +56,14 @@
     width: 100%;
     text-align: center;
     padding: 0; 
+    display: flex;
+    justify-content: center;
 }
 
 
 .lowerNav img{
     height:100%;
-    margin-left: 3rem;
+    margin-left: 2.6rem;
     cursor: pointer;
     
 }
@@ -83,7 +85,7 @@
     color: var(--red);
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 992px) {
     .upperNav{
     
         font-size: 1.3rem;
