--- a/res-front/src/app/app.component.html
+++ b/res-front/src/app/app.component.html
@@ -11,6 +11,8 @@
 
 <app-featured></app-featured> 
 
+<app-prefooter></app-prefooter>
+
 <app-footer></app-footer> 
 
 <router-outlet></router-outlet>
