--- a/res-front/src/app/prefooter/prefooter.component.css
+++ b/res-front/src/app/prefooter/prefooter.component.css
@@ -1,12 +1,13 @@
 .prefooter{
     background-color: var(--blue);
     font-family: sans-serif;
-    height: 300px;
     width: 90%;
     margin: auto;
     text-align: center;
     font-size: 2.5rem;
-    padding: 2rem;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    box-sizing: border-box;
     color: white;
     display: flex;
     justify-content: center;
@@ -14,11 +15,9 @@
 }
 
 .prefooter section{
-    width: 80%;
-    display: flex;
-    flex-direction: column;
+    width: 75%;
     text-align: start;
-    padding-left: 7rem;
+    padding-left: 6rem;
     font-weight: 900;
 }
 
@@ -31,7 +30,7 @@
 }
 
 .prefooter i{
-    width: 20%;
+    width: 25%;
     height: 100%;
     display: flex;
     justify-content: center;
