--- a/res-front/src/app/footer/footer.component.html
+++ b/res-front/src/app/footer/footer.component.html
@@ -12,7 +12,7 @@
    </div>
 
    <div class="res">
-    <img src="../../assets/res-logo-transp-white.png" alt="">
+    <img src="assets/res-logo-transp-white.png" alt="">
     <span>Renewable Energy Systems</span>
    </div>
 
