--- a/res-front/src/app/home/power/power.component.html
+++ b/res-front/src/app/home/power/power.component.html
@@ -1,6 +1,6 @@
 <section class="power">
 
-    <img src="../../assets/front.jpg" alt="">
+    <img src="assets/front.jpg" alt="">
 
     <p> <span>Power </span> <br/> <span>Your </span> <br/> <span>Life</span></p>
     
