--- a/res-front/src/app/home/service/service.component.html
+++ b/res-front/src/app/home/service/service.component.html
@@ -1,6 +1,6 @@
 <section class="service">
 
-    <img src="../../assets/service.jpg" data-aos="fade-right"  alt="">
+    <img src="assets/service.jpg" data-aos="fade-right"  alt="">
 
     <section data-aos="fade-left">
         <h1> Full Solution To Safeguard Your Operations And Keep Your Business Running Smoothly </h1>
