--- a/res-front/src/app/nav/nav.component.html
+++ b/res-front/src/app/nav/nav.component.html
@@ -16,12 +16,12 @@
 
 <nav class="lowerNav">
 
-    <img src="../../assets/res-logo.png" alt="">
+    <img src="assets/res-logo.png" alt="">
 
     <ul>
-        <a class="active" href="">Home</a>
-        <a href="">Solutions</a>
-        <a href="">Contact Us</a>
+        <a class="active" href="" routerLink="/home">Home</a>
+        <a href="solutions">Solutions</a>
+        <a href="contact">Contact Us</a>
     </ul>
 
 </nav>
