--- a/res-front/src/app/nav/nav.component.html
+++ b/res-front/src/app/nav/nav.component.html
@@ -19,9 +19,9 @@
     <img src="assets/res-logo.png" alt="">
 
     <ul>
-        <a class="active" href="" routerLink="/home">Home</a>
-        <a href="solutions">Solutions</a>
-        <a href="contact">Contact Us</a>
+        <a  routerLink="/home" routerLinkActive="activeLink">Home</a>
+        <a  routerLink="/solution" routerLinkActive="activeLink">Solutions</a>
+        <a  routerLink="/contact" routerLinkActive="activeLink">Contact Us</a>
     </ul>
 
 </nav>
