convert to modules

--- a/res-front/src/app/nav/nav.component.html
+++ b/res-front/src/app/nav/nav.component.html
@@ -20,8 +20,8 @@
 
     <ul>
         <a  routerLink="/home" routerLinkActive="activeLink">Home</a>
-        <a  routerLink="/solution" routerLinkActive="activeLink">Solutions</a>
-        <a  routerLink="/contact" routerLinkActive="activeLink">Contact Us</a>
+        <a  routerLink="/solutions" routerLinkActive="activeLink">Solutions</a>
+        <a  routerLink="/contacts" routerLinkActive="activeLink">Contact Us</a>
     </ul>
 
 </nav>
