--- a/res-front/src/app/contacts/contacts.component.html
+++ b/res-front/src/app/contacts/contacts.component.html
@@ -1,1 +1,71 @@
-<p>contacts works!</p>
+<section class="contact-form">
+    <h2>Send us a message</h2>
+    <div>
+        <label for="name">Name *</label>
+        <input type="text" name="name" id="name"  placeholder="Your Name">
+    </div>
+
+    <div>
+        <label for="email">Email *</label>
+        <input type="email" name="email" id="email"  placeholder="Your Email">
+    </div>
+
+    <div>
+        <label for="phone">Phone </label>
+        <input type="tel" name="email" id="phone"  placeholder="Phone">
+    </div>
+
+    <div>
+        <label for="company">Company </label>
+        <input type="text" name="company" id="company"  placeholder="Company Name">
+    </div>
+
+    <div>
+        <label for="message">Message *</label>
+        <textarea name="message" id="message" cols="30" rows="8"  placeholder="Write your message"></textarea>
+    </div>
+
+    <div>
+        <button type="submit">SEND MESSAGE</button>
+    </div>
+
+</section>
+
+<section class="contact-info">
+    <h2>Contact Information</h2>
+    <p>Get In Touch, <br> <strong>Let's help you!</strong></p>
+    <ul>
+      <li>
+        <i class="fa-solid fa-location-dot"></i>
+        <span>44 Elmessaha Street,  Dokki, Giza</span>
+      </li>
+      <li>
+        <i class="fa-brands fa-whatsapp"></i>
+        <a href="">+1 (12) 123456789</a>
+      </li>
+      <li>
+        <i class="fa-solid fa-phone"></i>
+        <span>+1 (291) 123456789</span>
+      </li>
+      <li>
+        <i class="fa-solid fa-phone"></i>
+        <span>+1 (291) 123456789</span>
+      </li>
+      <li>
+        <i class="fa-solid fa-phone"></i>
+        <span>+1 (291) 123456789</span>
+      </li>
+      <li>
+        <i class="fa-solid fa-phone"></i>
+        <span>+1 (291) 123456789</span>
+      </li>
+      <li>
+        <i class="fa-solid fa-envelope"></i>
+        <a href="">info@res-eg.com</a>
+      </li>
+      <li>
+        <i class="fa-brands fa-facebook"></i>
+        <a href="">facebook.com/res-eg</a>
+      </li>
+    </ul>
+</section>
