--- a/res-front/src/app/product/product.component.css
+++ b/res-front/src/app/product/product.component.css
@@ -66,7 +66,7 @@ color: white;
     padding: 8px;
 }
 tr:nth-child(even) {
-    background-color: var(--yellow);
+    background-color: #0077ff44;
     
 }
 .product thead th{
