--- a/res-front/src/app/solutions/solutions.component.html
+++ b/res-front/src/app/solutions/solutions.component.html
@@ -22,8 +22,8 @@
     <section class="products">
         
         <div class="product" *ngFor = "let product of products; index as i">
-            <img [src]="product.src" alt="">
-            <a routerLink="/product" >{{product.p}}</a>
+            <img [src]="'assets/products_images/' + product.image" alt="">
+            <a routerLink="/product" [queryParams]="{id:product.id}" >{{product.short_description}}</a>
         </div>
 
     </section>    
