--- a/res-front/src/app/solutions/solutions.component.html
+++ b/res-front/src/app/solutions/solutions.component.html
@@ -26,7 +26,12 @@
             <a routerLink="/product" [queryParams]="{id:product.id}" >{{product.short_description}}</a>
         </div>
 
-    </section>    
+        <div class="pagination">
+            <button><i class="fa-solid fa-chevron-left"></i></button>
+            <button><i class="fa-solid fa-chevron-right"></i></button>
+        </div>
+
+    </section>
 
     
 </section>
