--- a/res-front/src/app/solutions/solutions.component.css
+++ b/res-front/src/app/solutions/solutions.component.css
@@ -57,7 +57,6 @@ aside ul li i{
 
 .products{
     width: 70%;
-    
     box-sizing: border-box;
     display: flex;
     justify-content: space-around;
@@ -83,6 +82,30 @@ aside ul li i{
 .product a:hover{
     color: var(--blue);
     text-decoration: underline;
+}
+
+
+
+
+
+
+.pagination{
+    margin-top: 50px;
+    margin-bottom: 50px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.pagination button{
+    margin-left: 30px;
+    margin-right: 30px;
+    width: 80px;
+    height: 50px;
+    font-size: 30px;
+    background-color: var(--blue);
+    color: white;
+    border: none;
+    cursor: pointer;
 }
 
 
