added subscribe and message

--- a/res-front/src/app/footer/footer.component.css
+++ b/res-front/src/app/footer/footer.component.css
@@ -76,6 +76,7 @@ footer .subscribe button{
     padding: 10px;
     background-color: var(--yellow);
     font-size: 15px;
+    cursor: pointer;
 }
 
 
