--- a/res-front/src/app/contacts/contacts.component.html
+++ b/res-front/src/app/contacts/contacts.component.html
@@ -1,35 +1,35 @@
-<section class="contact-form">
+<form class="contact-form" #f="ngForm" (ngSubmit)="onSubmit(f)" novalidate>
     <h2>Send us a message</h2>
     <div>
         <label for="name">Name *</label>
-        <input type="text" name="name" id="name"  placeholder="Your Name">
+        <input type="text" name="name" id="name"  placeholder="Your Name" ngModel required>
     </div>
 
     <div>
         <label for="email">Email *</label>
-        <input type="email" name="email" id="email"  placeholder="Your Email">
+        <input type="email" name="email" id="email"  placeholder="Your Email" ngModel required>
     </div>
 
     <div>
         <label for="phone">Phone </label>
-        <input type="tel" name="email" id="phone"  placeholder="Phone">
+        <input type="tel" name="phone" id="phone"  placeholder="Phone" ngModel required>
     </div>
 
     <div>
         <label for="company">Company </label>
-        <input type="text" name="company" id="company"  placeholder="Company Name">
+        <input type="text" name="company" id="company"  placeholder="Company Name" ngModel required>
     </div>
 
     <div>
         <label for="message">Message *</label>
-        <textarea name="message" id="message" cols="30" rows="8"  placeholder="Write your message"></textarea>
+        <textarea name="message" id="message" cols="30" rows="8"  placeholder="Write your message" ngModel required></textarea>
     </div>
 
     <div>
         <button type="submit">SEND MESSAGE</button>
     </div>
 
-</section>
+</form>
 
 <section class="contact-info">
     <h2>Contact Information</h2>
