--- a/res-front/src/app/footer/footer.component.css
+++ b/res-front/src/app/footer/footer.component.css
@@ -84,7 +84,7 @@ footer .Copyright{
     grid-area: copyright;
     width: 100%;
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     justify-content: center;
     padding-bottom: 10px;
     font-size: 15px;
